# ARXIV-NLP-Analysis

./: Dockerfile  README.org  app.py  pyproject.toml  requirements.txt
app/: README.org  api_models.py  app.py  preprocessing.py  rag.py  scraping.py  topic_modeling.py
app/data_models/: Falk_et_al_2023.txt  abstracts.jsonl  topics.html
