[tool.poetry]
name = "arxiv-nlp-analysis"
version = "0.1.0"
description = "A repo to illustrate my NLP technical skills on an arxiv dataset"
authors = ["Kevin <chan.kevin@outlook.fr>"]
license = "BSD"
readme = "README.org"

[tool.poetry.dependencies]
python = "^3.11, <3.13"
attrs = "^23.1.0"
srsly = "^2.4.8"
pandas = "^2.1.3"
spacy = "^3.7.2"
en-core-web-trf = {url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_trf-3.7.2/en_core_web_trf-3.7.2-py3-none-any.whl"}
tqdm = "^4.66.1"
torch = ">=2.0.0, !=2.0.1, !=2.1.0"
numpy = "^1.26.2"
matplotlib = "^3.8.1"
sentence-transformers = "^2.2.2"
jq = "^1.6.0"
fastapi = "^0.104.1"
uvicorn = {extras = ["standard"], version = "^0.24.0.post1"}

[tool.poetry.group.scraping.dependencies]
arxiv = "^2.0.0"
beautifulsoup4 = "^4.12.2"
requests = "^2.31.0"
lxml = "^4.9.3"

[tool.poetry.group.dev.dependencies]
icecream = "^2.1.3"


[tool.poetry.group.topic_modeling.dependencies]
bertopic = "^0.15.0"


[tool.poetry.group.llm.dependencies]
langchain = "^0.0.336"
llama-cpp-python = "^0.2.18"


[tool.poetry.group.rag.dependencies]
chromadb = "^0.4.17"
lark = "^1.1.8"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
